--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./assets/styles/styles.css" class="css">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap" rel="stylesheet">
   <title>Morse Code Translator</title>
 </head>
 <body>
@@ -10,10 +12,17 @@
     <h1>Morse Code Translator</h1>
   </header>
   <main>
-
+    <textarea class="input-english" placeholder="Type your English to be translated here"></textarea>
+    <div>
+      <button class="btn-from-english">&darr; From English to Morse Code &darr;</button>
+      <button class="btn-reset">Reset</button>
+      <button class="btn-from-morse">&uarr; From Morse Code to English &uarr;</button>
+    </div>
+    <textarea class="input-morse" placeholder="Type your Morse Code to be translated here"></textarea>
   </main>
   <footer>
     <span>&copy; Nick Truby 2020 </span>
   </footer>
+  <script src="./app.js"></script>
 </body>
 </html>
